# VisualSynapse

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.visualsynapse/: active_session.txt  sessions.json
synapse/: __init__.py  cli.py  graph_manager.py  main.py  parser.py  run_mcp.py  visual_base_models.py
ui/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.tsx  index.css  main.jsx
ui/src/components/: CustomNode.tsx  DropdownMenu.tsx  Sidebar.tsx
ui/src/constants/: nodeStyles.ts
ui/src/context/: ThemeContext.tsx
ui/src/stores/: useGraphStore.ts
ui/src/types/: index.ts
ui/src/utils/: layout.ts
