[project]
name = "synapse-mcp"
version = "0.1.0"
description = "VisualSynapse - Code Logic Visualization MCP Server"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Adarsh Raj"}
]
keywords = ["mcp", "code-visualization", "ast", "graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "mcp>=1.0.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "websockets>=11.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

[project.scripts]
synapse = "synapse.cli:main"
synapse-mcp = "synapse.main:run_mcp_stdio"

[project.urls]
Homepage = "https://github.com/visualsynapse/visualsynapse"
Repository = "https://github.com/visualsynapse/visualsynapse"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synapse"]

[tool.hatch.build.targets.wheel.force-include]
"ui/dist" = "synapse/ui/dist"
